--- a/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
+++ b/config/crd/bases/vpn-gw.kube-ovn-operator.com_vpngws.yaml
@@ -901,14 +901,17 @@ spec:
               ipsecRemoteTs:
                 description: remote ipsec vpn server subnet cidrs
                 type: string
+              ipsecSecret:
+                description: ipsec vpn secret name, the secret should in the same
+                  namespace as the vpn gw
+                type: string
               ipsecVpnImage:
                 description: ipsec vpn server image, strongswan server
                 type: string
               memory:
                 type: string
               ovpnCipher:
-                description: ssl vpn use openvpn server all ssl vpn spec start with
-                  ovpn ovpn ssl vpn proto, udp or tcp, udp probably is better
+                description: ovpn ssl vpn proto, udp or tcp, udp probably is better
                 type: string
               ovpnPort:
                 description: ovpn ssl vpn port, default 1194 for udp, 443 for tcp
@@ -935,6 +938,10 @@ spec:
                 items:
                   type: string
                 type: array
+              sslSecret:
+                description: ssl vpn secret name, the secret should in the same namespace
+                  as the vpn gw
+                type: string
               sslVpnImage:
                 description: if use kube-ovn default subnet, svc cidr probably is
                   different, should be set pod svc cidr 10.96.0.0/20 OvpnSvcCidr string
@@ -1919,6 +1926,8 @@ spec:
                 type: string
               ipsecRemoteTs:
                 type: string
+              ipsecSecret:
+                type: string
               ipsecVpnImage:
                 type: string
               memory:
@@ -1944,6 +1953,8 @@ spec:
                 items:
                   type: string
                 type: array
+              sslSecret:
+                type: string
               sslVpnImage:
                 type: string
               subnet:
@@ -1994,6 +2005,7 @@ spec:
             - ip
             - ipsecRemoteAddrs
             - ipsecRemoteTs
+            - ipsecSecret
             - ipsecVpnImage
             - memory
             - ovpnCipher
@@ -2004,6 +2016,7 @@ spec:
             - publicSubnet
             - qosBandwidth
             - replicas
+            - sslSecret
             - sslVpnImage
             - subnet
             type: object
