ovpn use secret test pass

--- a/Dockerfile.openvpn
+++ b/Dockerfile.openvpn
@@ -11,7 +11,6 @@ RUN apt-get update && \
 RUN mkdir -p /dev/net && \
      mknod /dev/net/tun c 10 200 
 
+RUN mkdir -p /etc/openvpn/setup /etc/openvpn/certs/pki/private /etc/openvpn/certs/pki/issued
 COPY dist/openvpn-setup /etc/openvpn/setup/
 RUN chmod +x /etc/openvpn/setup/*.sh
-RUN mkdir -p /etc/openvpn/certs
-
