--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -53,10 +53,13 @@ rules:
   resources:
   - pods
   verbs:
+  - create
   - delete
-  - deletecollection
   - get
   - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - ""
   resources:
