--- a/bundle/manifests/vpn-gw.clusterserviceversion.yaml
+++ b/bundle/manifests/vpn-gw.clusterserviceversion.yaml
@@ -5,7 +5,7 @@ metadata:
     alm-examples: |-
       [
         {
-          "apiVersion": "vpn-gw.kube-ovn-operator.com/v1",
+          "apiVersion": "vpn-gw.kube-combo.com/v1",
           "kind": "VpnGw",
           "metadata": {
             "labels": {
@@ -33,14 +33,14 @@ spec:
     - description: VpnGw is the Schema for the vpngws API
       displayName: Vpn Gw
       kind: VpnGw
-      name: vpngws.vpn-gw.kube-ovn-operator.com
+      name: vpngws.vpn-gw.kube-combo.com
       statusDescriptors:
       - description: Conditions store the status conditions of the vpn gw instances
         displayName: Conditions
         path: conditions
       version: v1
-  description: kube-ovn-operator
-  displayName: kube-ovn-operator
+  description: kube-combo
+  displayName: kube-combo
   icon:
   - base64data: ""
     mediatype: ""
@@ -61,7 +61,7 @@ spec:
           - update
           - watch
         - apiGroups:
-          - vpn-gw.kube-ovn-operator.com
+          - vpn-gw.kube-combo.com
           resources:
           - vpngws
           verbs:
@@ -73,13 +73,13 @@ spec:
           - update
           - watch
         - apiGroups:
-          - vpn-gw.kube-ovn-operator.com
+          - vpn-gw.kube-combo.com
           resources:
           - vpngws/finalizers
           verbs:
           - update
         - apiGroups:
-          - vpn-gw.kube-ovn-operator.com
+          - vpn-gw.kube-combo.com
           resources:
           - vpngws/status
           verbs:
@@ -168,7 +168,7 @@ spec:
                 - --leader-elect
                 command:
                 - /manager
-                image: registry.cn-hangzhou.aliyuncs.com/bobz/kube-ovn-operator:latest
+                image: registry.cn-hangzhou.aliyuncs.com/bobz/kube-combo:latest
                 livenessProbe:
                   httpGet:
                     path: /healthz
@@ -243,11 +243,11 @@ spec:
   - supported: true
     type: AllNamespaces
   keywords:
-  - kube-ovn-operator
+  - kube-combo
   links:
   - name: Vpn Gw
     url: https://vpn-gw.domain
   maturity: alpha
   provider:
-    name: kube-ovn-operator
+    name: kube-combo
   version: 0.0.1
