--- a/config/crd/bases/vpn-gw.kube-ovn-operator.com_ipsecconnections.yaml
+++ b/config/crd/bases/vpn-gw.kube-ovn-operator.com_ipsecconnections.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
   creationTimestamp: null
-  name: ipsecconnections.vpn-gw.kube-ovn-operator.com
+  name: ipsecconnections.vpn-gw.kube-combo.com
 spec:
-  group: vpn-gw.kube-ovn-operator.com
+  group: vpn-gw.kube-combo.com
   names:
     kind: IpsecConnection
     listKind: IpsecConnectionList
