--- a/config/crd/patches/cainjection_in_ipsecconns.yaml
+++ b/config/crd/patches/cainjection_in_ipsecconns.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: CERTIFICATE_NAMESPACE/CERTIFICATE_NAME
-  name: ipsecconns.vpn-gw.kube-ovn-operator.com
+  name: ipsecconns.vpn-gw.kube-combo.com
