--- a/config/crd/patches/webhook_in_ipsecconns.yaml
+++ b/config/crd/patches/webhook_in_ipsecconns.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ipsecconns.vpn-gw.kube-ovn-operator.com
+  name: ipsecconns.vpn-gw.kube-combo.com
 spec:
   conversion:
     strategy: Webhook
