--- a/config/crd/patches/webhook_in_vpngws.yaml
+++ b/config/crd/patches/webhook_in_vpngws.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: vpngws.vpn-gw.kube-ovn-operator.com
+  name: vpngws.vpn-gw.kube-combo.com
 spec:
   conversion:
     strategy: Webhook
