--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: registry.cn-hangzhou.aliyuncs.com/bobz/kube-ovn-operator
+  newName: registry.cn-hangzhou.aliyuncs.com/bobz/kube-combo
   newTag: latest
