--- a/config/rbac/ipsecconn_viewer_role.yaml
+++ b/config/rbac/ipsecconn_viewer_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: ipsecconn-viewer-role
 rules:
 - apiGroups:
-  - vpn-gw.kube-ovn-operator.com
+  - vpn-gw.kube-combo.com
   resources:
   - ipsecconns
   verbs:
@@ -20,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - vpn-gw.kube-ovn-operator.com
+  - vpn-gw.kube-combo.com
   resources:
   - ipsecconns/status
   verbs:
