--- a/config/rbac/vpngw_editor_role.yaml
+++ b/config/rbac/vpngw_editor_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: vpngw-editor-role
 rules:
 - apiGroups:
-  - vpn-gw.kube-ovn-operator.com
+  - vpn-gw.kube-combo.com
   resources:
   - vpngws
   verbs:
@@ -24,7 +24,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - vpn-gw.kube-ovn-operator.com
+  - vpn-gw.kube-combo.com
   resources:
   - vpngws/status
   verbs:
